--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run build:js && npm run build:css && npm run build:minify",
     "build:css": "node-sass src/scss/index.scss dist/app.css --output-style compressed",
     "build:js": "rollup -c",
-    "build:minify": "terser dist/app.js -c --ecma 8 -o dist/app.min.js",
+    "build:minify": "terser dist/app.js -c -m --ecma 8 -o dist/app.min.js",
     "fix": "eslint src/jsx/**/*.jsx test/**/*.js --fix",
     "lint": "eslint src/jsx/**/*.jsx test/**/*.js",
     "test": "mocha --require @babel/register --recursive test --reporter spec"
