--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "code-and-comment",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "author": "38elements",
   "description": "Code and Comment is the application to add the comments to a file in Github.",
   "scripts": {
@@ -12,7 +12,7 @@
     "lint": "eslint src/jsx/**/*.jsx test/**/*.js",
     "test": "mocha --require @babel/register --recursive test --reporter spec"
   },
-  "license": "MIT License",
+  "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
