--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Code and Comment is the application to add the comments to a file in Github.",
   "scripts": {
     "build": "npm run build:js && npm run build:css && npm run build:minify",
+    "build:dev": "webpack --config webpack.config.js",
     "build:css": "node-sass src/scss/index.scss dist/app.css --output-style compressed",
     "build:js": "rollup -c && rollup -c -i src/jsx/repositories.jsx -o dist/repositories.js && rollup -c -i src/jsx/codeAndComments.jsx -o dist/codeAndComments.js",
     "build:minify": "terser dist/app.js -c -m --ecma 8 -o dist/app.min.js && terser dist/repositories.js -c -m --ecma 8 -o dist/repositories.min.js && terser dist/codeAndComments.js -c -m --ecma 8 -o dist/codeAndComments.min.js",
@@ -20,6 +21,7 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/register": "^7.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
     "eslint": "^5.14.1",
     "eslint-plugin-react": "^7.12.4",
@@ -30,7 +32,10 @@
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "sinon": "^7.2.2",
-    "terser": "^3.14.1"
+    "source-map-loader": "^0.2.4",
+    "terser": "^3.14.1",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
     "history": "^4.7.2",
