--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "source-map-loader": "^0.2.4",
     "terser": "^3.14.1",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "webpack-modules": "^1.0.0"
   },
   "dependencies": {
     "history": "^4.9.0",
