--- a/package.json
+++ b/package.json
@@ -35,14 +35,13 @@
     "source-map-loader": "^0.2.4",
     "terser": "^3.14.1",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-modules": "^1.0.0"
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
     "history": "^4.9.0",
     "js-base64": "^2.5.1",
     "marked": "^0.6.1",
-    "preact": "10.0.0-alpha.2",
+    "preact": "10.0.0-alpha.3",
     "preact-router": "^3.0.0",
     "unistore": "^3.4.1"
   }
