--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "history": "^4.9.0",
     "js-base64": "^2.5.1",
     "marked": "^0.6.1",
-    "preact": "10.0.0-alpha.4",
+    "preact": "10.0.0-beta.0",
     "preact-router": "^3.0.0",
     "unistore": "^3.4.1"
   }
