--- a/package.json
+++ b/package.json
@@ -23,18 +23,21 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
+    "css-loader": "^2.1.1",
     "eslint": "^5.14.1",
     "eslint-plugin-react": "^7.12.4",
+    "mini-css-extract-plugin": "^0.6.0",
     "mocha": "^5.2.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "rollup": "^1.9.3",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.2.2",
     "rollup-plugin-node-resolve": "^4.0.1",
+    "sass-loader": "^7.1.0",
     "sinon": "^7.2.2",
     "source-map-loader": "^0.2.4",
     "terser": "^3.14.1",
-    "webpack": "^4.29.6",
+    "webpack": "^4.30.0",
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
