--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:minify": "terser dist/app.js -c -m --ecma 8 -o dist/app.min.js && terser dist/repositories.js -c -m --ecma 8 -o dist/repositories.min.js && terser dist/codeAndComments.js -c -m --ecma 8 -o dist/codeAndComments.min.js",
     "fix": "eslint src/jsx/**/*.jsx test/**/*.js --fix",
     "lint": "eslint src/jsx/**/*.jsx test/**/*.js",
-    "test": "mocha --require @babel/register --recursive test --reporter spec"
+    "test": "mocha --recursive test --reporter spec"
   },
   "license": "MIT",
   "devDependencies": {
@@ -24,8 +24,12 @@
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
     "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-preact-pure": "^1.13.1",
     "eslint": "^5.14.1",
     "eslint-plugin-react": "^7.12.4",
+    "jsdom": "^15.0.0",
+    "jsdom-global": "^3.0.2",
     "mini-css-extract-plugin": "^0.6.0",
     "mocha": "^5.2.0",
     "node-sass": "^4.12.0",
