--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sinon": "^7.2.2",
     "source-map-loader": "^0.2.4",
     "terser": "^3.14.1",
+    "travis-size-report": "^1.0.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.2.3"
   },
