--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ after_success:
     - npm run build:js
     - npm run build:minify
     - gzip dist/app.min.js
-    - sizereport --config
+    - wc -c < dist/app.min.js.gz
