--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "history": "^4.9.0",
     "js-base64": "^2.5.1",
     "marked": "^0.7.0",
-    "preact": "10.0.0-beta.3",
+    "preact": "10.0.0-rc.0",
     "preact-router": "^3.0.0",
     "unistore": "^3.4.1"
   }
