--- a/.babelrc
+++ b/.babelrc
@@ -5,8 +5,9 @@
         'node': 10
       }
     }],
+    ['@babel/preset-typescript', { isTSX: true, allExtensions: true, jsxPragma: 'h' }]
   ],
   plugins: [
-    ['@babel/plugin-transform-react-jsx', {'pragma': 'h'}],
+    ['@babel/plugin-transform-react-jsx', {pragma: 'h', pragmaFrag: 'Fragment',}],
   ]
 }
