--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:css": "node-sass src/scss/index.scss dist/app.css --output-style compressed",
     "build:js": "rollup -c && rollup -c -i src/jsx/repositories.jsx -o dist/repositories.js && rollup -c -i src/jsx/codeAndComments.jsx -o dist/codeAndComments.js",
     "build:minify": "terser dist/app.js -c -m --ecma 8 -o dist/app.min.js && terser dist/repositories.js -c -m --ecma 8 -o dist/repositories.min.js && terser dist/codeAndComments.js -c -m --ecma 8 -o dist/codeAndComments.min.js",
-    "fix": "eslint src/jsx/**/*.jsx test/**/*.js --fix",
-    "lint": "eslint src/jsx/**/*.jsx test/**/*.js",
+    "fix": "eslint src/jsx/**/*.jsx src/jsx/**/*.tsx test/**/*.js --fix",
+    "lint": "eslint src/jsx/**/*.jsx src/jsx/**/*.tsx test/**/*.js",
     "test": "mocha --recursive test --reporter spec"
   },
   "license": "MIT",
@@ -19,7 +19,12 @@
     "@babel/core": "^7.4.3",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/preset-env": "^7.4.3",
+    "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.4.0",
+    "@types/tapable": "^1.0.4",
+    "@types/webpack": "^4.4.35",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
@@ -28,6 +33,7 @@
     "enzyme-adapter-preact-pure": "^2.0.0",
     "eslint": "^6.0.0",
     "eslint-plugin-react": "^7.14.1",
+    "fork-ts-checker-webpack-plugin": "^1.4.2",
     "jsdom": "^15.0.0",
     "jsdom-global": "^3.0.2",
     "mini-css-extract-plugin": "^0.7.0",
@@ -41,6 +47,7 @@
     "sinon": "^7.2.2",
     "source-map-loader": "^0.2.4",
     "terser": "^4.0.0",
+    "typescript": "^3.5.3",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5"
   },
