--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.4.0",
+    "@types/js-base64": "^2.3.1",
     "@types/tapable": "^1.0.4",
     "@types/webpack": "^4.32.1",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
