--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "@types/js-base64": "^2.3.1",
     "@types/tapable": "^1.0.4",
     "@types/webpack": "^4.32.1",
-    "@typescript-eslint/eslint-plugin": "^1.12.0",
-    "@typescript-eslint/parser": "^1.12.0",
-    "babel-eslint": "^10.0.2",
+    "@typescript-eslint/eslint-plugin": "^2.4.0",
+    "@typescript-eslint/parser": "^2.4.0",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
     "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-preact-pure": "^2.0.2",
-    "eslint": "^6.1.0",
-    "eslint-plugin-react": "^7.14.3",
+    "enzyme-adapter-preact-pure": "^2.1.0",
+    "eslint": "^6.5.1",
+    "eslint-plugin-react": "^7.16.0",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
     "jsdom": "^15.0.0",
     "jsdom-global": "^3.0.2",
@@ -48,16 +48,16 @@
     "sinon": "^7.2.2",
     "source-map-loader": "^0.2.4",
     "terser": "^4.0.0",
-    "typescript": "^3.5.3",
+    "typescript": "^3.6.4",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6"
   },
   "dependencies": {
-    "history": "^4.9.0",
+    "history": "^4.10.1",
     "js-base64": "^2.5.1",
     "marked": "^0.7.0",
-    "preact": "10.0.0-rc.3",
-    "preact-router": "^3.0.0",
-    "unistore": "^3.4.1"
+    "preact": "10.0.1",
+    "preact-router": "^3.0.1",
+    "unistore": "^3.5.0"
   }
 }
