--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.4.0",
     "@types/js-base64": "^2.3.1",
+    "@types/marked": "^0.6.5",
     "@types/tapable": "^1.0.4",
     "@types/webpack": "^4.39.5",
     "@typescript-eslint/eslint-plugin": "^2.4.0",
