--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run build:js && npm run build:css && npm run build:minify",
     "build:dev": "webpack --config webpack.config.js",
     "build:css": "node-sass src/scss/index.scss dist/app.css --output-style compressed",
-    "build:js": "rollup -c && rollup -c -i src/jsx/repositories.jsx -o dist/repositories.js && rollup -c -i src/jsx/codeAndComments.jsx -o dist/codeAndComments.js",
+    "build:js": "rollup -c && rollup -c -i src/jsx/repositories.tsx -o dist/repositories.js && rollup -c -i src/jsx/codeAndComments.tsx -o dist/codeAndComments.js",
     "build:minify": "terser dist/app.js -c -m --ecma 8 -o dist/app.min.js && terser dist/repositories.js -c -m --ecma 8 -o dist/repositories.min.js && terser dist/codeAndComments.js -c -m --ecma 8 -o dist/codeAndComments.min.js",
     "fix": "eslint src/jsx/**/*.jsx src/jsx/**/*.tsx test/**/*.js --fix",
     "lint": "eslint src/jsx/**/*.jsx src/jsx/**/*.tsx test/**/*.js",
