--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
     "noEmit": true,
     "strict": true,
     "moduleResolution": "node",
-    "esModuleInterop": true,
-    "typeRoots": ["types"]
+    "esModuleInterop": true
   }
 }
