--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
     "@babel/register": "^7.6.2",
+    "@types/enzyme": "^3.10.3",
     "@types/history": "^4.7.3",
     "@types/js-base64": "^2.3.1",
     "@types/marked": "^0.6.5",
