--- a/package.json
+++ b/package.json
@@ -15,52 +15,52 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.7.5",
-    "@babel/core": "^7.7.5",
-    "@babel/plugin-transform-react-jsx": "^7.7.4",
-    "@babel/preset-env": "^7.7.5",
-    "@babel/preset-typescript": "^7.7.4",
-    "@babel/register": "^7.7.4",
-    "@types/enzyme": "^3.10.3",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-transform-react-jsx": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-typescript": "^7.8.3",
+    "@babel/register": "^7.8.3",
+    "@types/enzyme": "^3.10.4",
     "@types/history": "^4.7.3",
     "@types/js-base64": "^2.3.1",
     "@types/marked": "^0.6.5",
-    "@types/tapable": "^1.0.4",
-    "@types/webpack": "^4.39.5",
-    "@typescript-eslint/eslint-plugin": "^2.7.0",
-    "@typescript-eslint/parser": "^2.7.0",
+    "@types/tapable": "^1.0.5",
+    "@types/webpack": "^4.41.4",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
-    "css-loader": "^3.2.0",
-    "enzyme": "^3.10.0",
+    "css-loader": "^3.4.2",
+    "enzyme": "^3.11.0",
     "enzyme-adapter-preact-pure": "^2.2.0",
-    "eslint": "^6.5.1",
-    "eslint-plugin-react": "^7.16.0",
-    "fork-ts-checker-webpack-plugin": "^3.1.0",
-    "jsdom": "^15.2.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3",
+    "fork-ts-checker-webpack-plugin": "^4.0.3",
+    "jsdom": "^16.1.0",
     "jsdom-global": "^3.0.2",
-    "mini-css-extract-plugin": "^0.8.0",
-    "mocha": "^6.2.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "mocha": "^7.0.1",
     "node-sass": "^4.12.0",
-    "rollup": "^1.26.3",
+    "rollup": "^1.31.0",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "sass-loader": "^8.0.0",
-    "sinon": "^7.5.0",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "sass-loader": "^8.0.2",
+    "sinon": "^8.1.1",
     "source-map-loader": "^0.2.4",
-    "terser": "^4.3.9",
-    "typescript": "^3.7.3",
-    "webpack": "^4.41.2",
+    "terser": "^4.6.3",
+    "typescript": "^3.7.5",
+    "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "history": "^4.10.1",
     "js-base64": "^2.5.1",
     "marked": "^0.7.0",
-    "preact": "10.2.1",
-    "preact-router": "^3.1.0",
-    "unistore": "^3.5.0"
+    "preact": "10.3.0",
+    "preact-router": "^3.2.1",
+    "unistore": "^3.5.1"
   }
 }
