refactor: use preact-markup

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "js-base64": "^2.5.1",
     "marked": "^0.7.0",
     "preact": "10.3.1",
+    "preact-markup": "^2.0.0",
     "preact-router": "^3.2.1",
     "unistore": "^3.5.1"
   }
