--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.8.3",
     "@babel/register": "^7.8.3",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-replace": "^2.3.2",
     "@types/enzyme": "^3.10.4",
     "@types/history": "^4.7.3",
     "@types/js-base64": "^2.3.1",
@@ -45,8 +48,6 @@
     "node-sass": "^4.12.0",
     "rollup": "^1.31.0",
     "rollup-plugin-babel": "^4.3.3",
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
     "sass-loader": "^8.0.2",
     "sinon": "^8.1.1",
     "source-map-loader": "^0.2.4",
@@ -59,7 +60,7 @@
     "history": "^4.10.1",
     "js-base64": "^2.5.1",
     "marked": "^0.8.0",
-    "preact": "10.4.0",
+    "preact": "10.4.1",
     "preact-markup": "^2.0.0",
     "preact-router": "^3.2.1",
     "unistore": "^3.5.1"
